--- a/index.html
+++ b/index.html
@@ -139,16 +139,16 @@ I will be posting more short videos on Youtube and social media between now and 
  <h2>My plan</h2>
  <p>I have a plan to:</p>
  <ul>
-  <li>Solve the cost of living crisis and the housing crisis;</li>
-  <li>Protect and improve our quality of life, our environment, the beauty of our city and our suburbs, and our public services;</li>
-  <li>Solve the aged care and hospital crisis, including the ramping crisis;</li>
-  <li>Address the pollution that caused the algae crisis so the algae doesn't come back;</li>
-  <li>Solve the police staffing crisis;</li>
-  <li>Protect our children, women and men from unfair treatment and harm, including from gambling ads and other harmful advertising;</li>
-  <li>Solve the underemployment crisis;</li>
-  <li>Support measures to protect animals from unnecessary harm and cruelty;</li>
-  <li>Forge a better way of doing politics and a more democratic political system;</li>
-  <li>Increase the accountability, efficiency and competence of our parliament and our policy-making.</li>
+  <li>Solve the <a href="#COL">cost of living crisis</a> and the <a href="#3_Housing">housing crisis</a>;</li>
+  <li>Protect and improve our <a href="#QOL">quality of life</a>, our <a href="#14.0_Clean_Air">environment</a>, the <a href="#5.1_Build_Better">beauty of our city and our suburbs</a>, and our public services;</li>
+  <li>Solve the <a href="#6.0_Better_Care">aged care and hospital crisis</a>, including the ramping crisis;</li>
+  <li>Address the pollution that caused the <a href="#13.0_Algae_Solution">algae crisis</a> so the algae doesn't come back;</li>
+  <li>Solve the <a href="#12.0_Police_Support">police staffing crisis</a>;</li>
+  <li>Protect our children, women and men from <a href="#19.0_Wellbeing">unfair treatment and harm</a>, including from <a href="#19.4_Regulate_Advertising">gambling ads and other harmful advertising</a>;</li>
+  <li>Solve the <a href="#10.0_SAES">unemployment and underemployment crisis</a>;</li>
+  <li>Support measures to <a href="#20.0_Non-violence">protect animals from unnecessary harm and cruelty</a>;</li>
+  <li>Forge a <a href="#beyondpolicy">better way of doing politics</a> and a <a href="#17.0_Democratise">more democratic political system</a>;</li>
+  <li>Increase the <a href="#17.0_Democratise">accountability, efficiency and competence of our parliament</a> and our policy-making.</li>
  </ul>
 
  <!-- <p>That isn't to say that my plan is perfect. Nor is it to claim I can solve any of this by myself. But I do believe most of the above is achievable with enough people working together on an adequate plan and enough people supporting it.</p>
@@ -645,6 +645,19 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 
 <p>Provide government-supported apprenticeships and job placements for all unemployed and underemployed Australians who want them by creating a South Australian government employment service. Expert in the field, David O'Halloran, PhD, recommends creating government employment services at the state level rather than at the federal level. Currently we have neither. The existing private services are inadequate. With the support of the funding from charging corporations and decamillionaires appropriately, the South Australian government employment service will ensure that everyone has the support they need to do the work that will most benefit South Australians, and that businesses that need support to help with this will be given that support.</p>
 
+<article id="underemployment">
+ <h3>More details on the unemployment and underemployment crisis</h3>
+ <p>
+  The official unemployment rate for South Australia (and Australia) in December 2025 was 4.0% (4.2% Australia-wide). The partial underemployment rate was 6.3% (5.9% Australia-wide), for a total official underutilisation rate of 10.3% (10.1% Australia-wide). Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skills and knowledge are not being put to best use. This means that the true underemployment or underutilisation rate, in the broader sense, may be well over 20%. Unlike the piecemeal plans of our political parties, my plan outlined above will fully resolve this issue if well-implemented, especially Policies 6 and 7.
+ </p>
+ <p>
+  In 2024, over 30% of Computing and Information Systems university graduates reported that they did not have full-time employment 4 to 6 months after graduating, and of those with full-time employment, an additional 28% reported that they were not fully utilising their skills and education, meaning only about 50% were working full-time in an area that fully utilised their skills. Even within Engineering, 15% of graduates did not have full-time employment and an additional 23% reported they were not fully utilising their skills and education. For all degrees combined, 26% of graduates were not in full-time employment and an additional 28% of full-time employed graduates reported that they were not fully utilising their skills and knowledge. Many graduates are rejected from relevant jobs because employers prefer to bring people in from overseas with more impressive CVs. The federal Labor government plans to bring 1 million more people in on visas over the next 4 years, as part of a total increase in the population of 1.4 million, about the size of the entire city of Adelaide. This has benefits, especially for property developers, immigration lawyers, and large corporations that work to keep their profits high by keeping salaries low and their training costs low, but Australians have been gaslit by politicians and some of their followers on the downsides of this for everyone else, which only adds to the misguided hatred such as racism that they claim to oppose. We are told by politicians that several million more people per decade is necessary to address skills shortages and has negligible downsides, but there are over two million underemployed or unemployed Australians that can be trained to solve almost all of our real skills shortages, and who desperately need that extra income, many of whom already have the necessary education. 
+ </p>
+ <p>For a deeper discussion of the related underpayment crisis, and my creative writing, see <a href="https://alecgargett.github.io/alecgargett-space">my old artist website</a>.</p>
+</article>
+
+<h3>Employing people to work in policy development</h3>
+
 <p>Ultimately, every well-meaning person who wants to work in policy development in a democracy should be allowed fair involvement, and paid fairly if they want pay. Pay level above the minimum award rate and maximum hours should initially be proportionate to objective skills testing, and later that salary should be added to with bonuses based on democratic review and peer review of the quality of their contributions, and their quantity of contribution to implemented policies. No one should be denied the right to be involved with policy development in a democracy, and no one should be denied the right to adequate pay for such work.</p>
 
 <h4 id="11.0_Reduce_Immigration">Reduce net immigration without reducing the refugee intake<br>
@@ -906,16 +919,6 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 
 <p>Political parties are all failing to develop a complete solution by failing to address both of the above. In fact, our political parties haven't even been properly addressing <em>either</em>, especially given both factors above are interrelated. My own plan is the only plan I've seen that even attempts to adequately address both factors.</p>
 
-<article id="underemployment">
- <h3>More details on the underemployment crisis</h3>
- <p>
-  The official unemployment rate for South Australia in October 2025 was 4.5% and the partial underemployment rate was 6.3%, for a total official underutilisation rate of 10.8%. Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skills and knowledge are not being put to best use. This means that the true underemployment or underutilisation rate, in the broader sense, may be well over 20%. Unlike the piecemeal plans of our political parties, my plan outlined above will fully resolve this issue if well-implemented, especially Policies 6 and 7.
- </p>
- <p>
-  In 2024, over 30% of Computing and Information Systems university graduates reported that they did not have full-time employment 4 to 6 months after graduating, and of those with full-time employment, an additional 28% reported that they were not fully utilising their skills and education, meaning only about 50% were working full-time in an area that fully utilised their skills. Even within Engineering, 15% of graduates did not have full-time employment and an additional 23% reported they were not fully utilising their skills and education. For all degrees combined, 26% of graduates were not in full-time employment and an additional 28% of full-time employed graduates reported that they were not fully utilising their skills and knowledge. Many graduates are rejected from relevant jobs because employers prefer to bring people in from overseas with more impressive CVs. The federal Labor government plans to bring 1 million more people in on visas over the next 4 years, as part of a total increase in the population of 1.4 million, about the size of the entire city of Adelaide. This has benefits, especially for property developers, immigration lawyers, and large corporations that work to keep their profits high by keeping salaries low and their training costs low, but Australians have been gaslit by politicians and some of their followers on the downsides of this for everyone else, which only adds to the misguided hatred such as racism that they claim to oppose. We are told by politicians that several million more people per decade is necessary to address skills shortages and has negligible downsides, but there are over two million underemployed or unemployed Australians that can be trained to solve almost all of our real skills shortages, and who desperately need that extra income, many of whom already have the necessary education. 
- </p>
- <p>For a deeper discussion of the related underpayment crisis, and my creative writing, see <a href="https://alecgargett.github.io/alecgargett-space">my old artist website</a>.</p>
-</article>
 <article id="violence">
  <h3>The harder problem of global injustice and violence</h3>
  <p>Although I am confident that we can solve most of our crises listed above locally, there are global problems that are much harder to solve, like the problems of global pollution, war and unjust violence. I'll do what I can to come up with a solution, and support others working on a solution. I am confident that we can show leadership to the rest of the world through our actions to address our own problems here in South Australia, and that this will put us in a position to have a better influence on world affairs.
