--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
  For the last 18 years I've been doing the deep thinking that is lacking from parliament,<br>
  and now I have a plan.
 
+<p>Please email me if you are willing to help me to register as a candidate by providing me with your details: <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
+
 <p>Most people won't want to read all 10&#8239;000 words of the summary of my plan on this website, which is fine.<br>
 The most important ideas behind my campaign are explained in the first two 90-second videos.<br>
 I will be posting more short videos on Youtube and social media between now and the election.</p>
