--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>Since I will work for the people of Waite, my priorities have to be determined by the people of Waite. I will always be seeking to further improve my policies and ensure they are aligned with the wishes of the electorate, including in response to feedback from the people of Waite. Please send any feedback to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
 
+<p>My education policies are currently under development and will be published shortly.</p>
+
 <p>Here is a (very) quick summary of most of my policies:</p>
 
 <iframe width="366" height="651" src="https://www.youtube.com/embed/38VHuKiLySk" title="Quick summary of my policies as an independent for Waite (Mitcham Area), Adelaide, South Australia." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
