--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>Since I will work for the people of Waite, my priorities have to be determined by the people of Waite. I will always be seeking to further improve my policies and ensure they are aligned with the wishes of the electorate, including in response to feedback from the people of Waite. Please send any feedback to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
 
+<p>If I'm elected, I will continue to develop these policies, make more short videos to explain each of them, and add a comment section to this website so that others can contirbute.</p>
+
 <p>My education policies are currently under development and will be published shortly.</p>
 
 <p>Here is a (very) quick summary of most of my policies:</p>
