Education, music, taxes

--- a/index.html
+++ b/index.html
@@ -392,9 +392,12 @@ I will be posting more short videos on Youtube and social media between now and 
     <li><a href="#17.5_Electorate_statistics">Gather and publish data on what each South Australian state electorate wants from government, and what experts support</a> (17.5)</li>
    </ul>
   </li>
-  <h3><a href="#18.0_Support_Artists">Music</a></h3>
+  <h3><a href="#18.0_Education_and_Music">Education and Music</a></h3>
   <li>
-   <a href="#18.0_Support_Artists">Ensure more local music in local businesses and fair pay for local recording artists</a>
+   <a href="#18.1_Support_Learning">Provide funding for smaller class sizes, better pay for teachers and evidence-based reform</a>
+  </li>
+  <li>
+   <a href="#18.2_Support_Artists">Ensure more local music in local businesses and fair pay for local recording artists</a>
   </li>
   <h3><a href="#19.0_Wellbeing">Public wellbeing</a></h3>
   <li>
@@ -480,7 +483,9 @@ I will be posting more short videos on Youtube and social media between now and 
 <small>(1.3_Taxes)</small>
 </h4>
 
-<p>Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500 000 per year (or more than ten times above the median average income).<br>
+<p>Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500 000 per year (or more than ten times above the median average income).</p>
+
+<p>The tax system should be designed to prevent individuals from earning more than 10 times more in net lifetime income than the median lifetime income, and if they have already earned more than this in net income, their assests should be taxed if necessary to compensate.<br>
 </p>
 
 <h4 id="1.4_Wages">Increase wages faster and reduce unemployment<br>
@@ -802,22 +807,38 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  <li>17.6.3 Provide ICAC the resources and oversight to ensure they thoroughly investigate corporations, politicians and political parties for this type of interference in recent elections.</li>
 </ul>
 
- <h4 id="18.0_Support_Artists">Support South Australian artists<br>
-  <small>(18.0_Support_Artists)</small>
- </h4>
+<h4><a href="#18.0_Education_and_Music">Education and Music</a></h3>
+<small>(18.0_Education_and_Music)</small>
+</h4>
+
+<ul>
+ <li>
+   Provide funding for smaller class sizes, better pay for teachers and evidence-based reform.
+ </li>
+</ul>
+
+<h4 id="18.2_Support_Artists">Support South Australian artists<br>
+ <small>(18.2_Support_Artists)</small>
+</h4>
 
 <!--  <iframe width="381" height="677" src="https://www.youtube.com/embed/5ZrMfvv0uzM" title="How to fix the Spotify problem, and get artists paid fairly." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
  
- <p>Although South Australians pride ourselves on our local arts scene, it's not as strong as it could be because not all artists are fairly paid, especially musicians and recording artists. Even very popular recording artists are often not quite popular enough to make a good living. I will support the local arts scene in whatever way I can and try to ensure that all South Australian artists are fairly paid based on the quality, quantity and popularity of their work, with adequate government funding to artists.</p>
+ <p>Although South Australians pride ourselves on our local arts scene, it's not as strong as it could be because not all artists are fairly paid, especially musicians and recording artists. Even our best musicians and our most popular recording artists are often not quite popular enough to make a good living. I will support the local arts scene in whatever way I can and try to ensure that all South Australian artists are fairly paid based on the quality, quantity and popularity of their work, with adequate government funding to artists.</p>
+
+ <p>When it comes to live music, my main policy is to:</p>
+
+ <ul>
+  <li>18.2.1 Pay our best musicians including classical and jazz musicians to play unamplified music in our public spaces, including our shopping districts.</li>
+ </ul>
  
  <p>It's especially difficult for recording artists to get fairly paid these days because cheap streaming services compete with each other and with music piracy. To address this I propose the following solutions:</p>
 
  <ul>
-  <li>18.1 Require that a minimum percentage of recorded music played at businesses such as shops, pubs and bars be South Australian music - say every second song or every third song - and ensure that local artists who need support are paid fairly based on how much they get played and how much support they need.</li>
-  <li>18.2 Require venues to send their playlists in to a government department, so that local artists that need support can be paid a fair percentage of both the licensing fees and the government funding based on how often their music is played.</li>
-  <li>18.3 Make licensing fees proportional to what a business can afford to pay. For example, businesses with high profit margins will pay more, while charity shops won't have to pay at all to play recorded music, but are still required to send their playlists in so that the South Australian artists can be compensated by the government for their music being played.</li>
-  <li>18.4 Lobby the federal government and foreign governments to regulate minimum compensation by streaming services for artists played on streaming services, above what they are currently paid.</li>
-  <li>18.5 Look into creating a government-owned music streaming service that pays local artists fairly.</li>
+  <li>18.2.2 Require that a minimum percentage of recorded music played at businesses such as shops, pubs and bars be South Australian music - say every second song or every third song - and ensure that local artists who need support are paid fairly based on how much they get played and how much support they need.</li>
+  <li>18.2.3 Require venues to send their playlists in to a government department, so that local artists that need support can be paid a fair percentage of both the licensing fees and the government funding based on how often their music is played.</li>
+  <li>18.2.4 Make licensing fees proportional to what a business can afford to pay. For example, businesses with high profit margins will pay more, while charity shops won't have to pay at all to play recorded music, but are still required to send their playlists in so that the South Australian artists can be compensated by the government for their music being played.</li>
+  <li>18.2.5 Lobby the federal government and foreign governments to regulate minimum compensation by streaming services for artists played on streaming services, above what they are currently paid.</li>
+  <li>18.2.6 Look into creating a government-owned music streaming service that pays local artists fairly.</li>
  </ul>
 
  <h3>Public wellbeing and preventing violence</h3>
@@ -919,7 +940,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 <p>When it comes to quality, there are two main reasons we are seeing a decline in the quality of housing:</p>
 
 <ol>
- <li>Firstly, a widening wealth gap. Technological advances, wealth accumulation and government policies are making decamillionaires richer, including property investors, while others are getting poorer in real terms with each generation, which means more people renting, fewer people owning, and far fewer people living in the place they have the most sentimental attachment to.</li>
+ <li>Firstly, an extreme and widening wealth gap. Technological advances, wealth accumulation and government policies are making decamillionaires richer, including property investors, while others are getting poorer in real terms with each generation, which means more people renting, fewer people owning, and far fewer people living in the place they have the most sentimental attachment to.</li>
  <li>Secondly, rapidly increasing population in our country and in our cities due to high immigration rates. An increasing population in a city, necessarily means people have to live on smaller and smaller properties, or live further and further from the ground, or live further and further from the city centre; and in practice it results in all three happening, with smaller gardens or no garden and less view of nature. And since we aren't building new business districts on the far outskirts of our cities and adequate public transport, this also means longer and longer average commute times. An increasing population also necessarily means a smaller amount of land and other natural resources per capita, which is the underappreciated foundation of real wealth. This also means less surplus natural resources available for solving these problems in other ways, like building new business districts on the far outskirts of our cities. There are reasons why we no longer build new cities in Australia, and it's partly due to the massive decline in natural resources available per capita, which creates a vicious cycle.</li>
 </ol>
 
