--- a/index.html
+++ b/index.html
@@ -815,6 +815,9 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  <li>
    Provide funding for smaller class sizes, better pay for teachers and evidence-based reform.
  </li>
+ <li>
+   Look into having two main classes for each child at Primary School: an age-based class that they stick with throughout their time at school, and a literacy and numeracy based class that disregards age to teach children who are at the same level in these subjects.
+ </li>
 </ul>
 
 <h4 id="18.2_Support_Artists">Support South Australian artists<br>
