--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500 000 per year (or more than ten times above the median average income).</p>
 
-<p>The tax system should be designed to prevent individuals from earning more than 10 times more in net lifetime income than the median lifetime income, and if they have already earned more than this in net income, their assests should be taxed if necessary to compensate.<br>
+<p>The tax system should be designed to prevent individuals from earning more than 10 times more in net lifetime income than the median lifetime income, and if they have already earned more than this in net income, their assets should be taxed if necessary to compensate.<br>
 </p>
 
 <h4 id="1.4_Wages">Increase wages faster and reduce unemployment<br>
