--- a/index.html
+++ b/index.html
@@ -807,16 +807,16 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  <li>17.6.3 Provide ICAC the resources and oversight to ensure they thoroughly investigate corporations, politicians and political parties for this type of interference in recent elections.</li>
 </ul>
 
-<h4><a href="#18.0_Education_and_Music">Education and Music</a></h3>
+<h4><a href="#18.0_Education_and_Music">Education and Music</a>
 <small>(18.0_Education_and_Music)</small>
 </h4>
 
 <ul>
  <li>
-   18.1 Provide funding for smaller class sizes, better pay for teachers and evidence-based reform.
+   18.1.1 Provide funding for smaller class sizes, better pay for teachers and evidence-based reform.
  </li>
  <li>
-   18.2 Look into having two main classes for each child at Primary School: an age-based class that they stick with throughout their time at school, and a literacy and numeracy based class that disregards age to teach children who are at the same level in these subjects.
+   18.1.2 Look into having two main classes for each child at Primary School: an age-based class that they stick with throughout their time at school, and a literacy and numeracy based class that disregards age to teach children who are at the same level in these subjects.
  </li>
 </ul>
 
