--- a/index.html
+++ b/index.html
@@ -393,10 +393,14 @@ I will be posting more short videos on Youtube and social media between now and 
   </li>
   <h3><a href="#18.0_Education_and_Music">Education and Music</a></h3>
   <li>
-   <a href="#18.1_Support_Learning">Provide funding for smaller class sizes, better pay for teachers and evidence-based reform</a>
-  </li>
-  <li>
-   <a href="#18.2_Support_Artists">Ensure more local music in local businesses and fair pay for local recording artists</a>
+   <ul class="sub-toc-list">
+    <li>
+     <a href="#18.1_Support_Learning">Provide funding for smaller class sizes, better pay for teachers and evidence-based reform</a>
+    </li>
+    <li>
+     <a href="#18.2_Support_Artists">Ensure more local music in local businesses and fair pay for local recording artists</a>
+    </li>
+   </ul>
   </li>
   <h3><a href="#19.0_Wellbeing">Public wellbeing</a></h3>
   <li>
