--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@ I will be posting more short videos on Youtube and social media between now and 
   <li>Solve the <a href="#12.0_Police_Support">police staffing crisis</a>;</li>
   <li>Protect our children, women and men from <a href="#19.0_Wellbeing">unfair treatment and harm</a>, including from <a href="#19.4_Regulate_Advertising">gambling ads and other harmful advertising</a>;</li>
   <li>Solve the <a href="#10.0_SAES">unemployment and underemployment crisis</a>;</li>
+  <li>Solve <a href="#18.0_Education_and_Music">education</a> and local <a href="#18.2_Support_Artists">music</a>;</li>
   <li>Support measures to <a href="#20.0_Non-violence">protect animals from unnecessary harm and cruelty</a>;</li>
   <li>Forge a <a href="#beyondpolicy">better way of doing politics</a> and a <a href="#17.0_Democratise">more democratic political system</a>;</li>
   <li>Increase the <a href="#17.0_Democratise">accountability, efficiency and competence of our parliament</a> and our policy-making.</li>
@@ -245,8 +246,6 @@ I will be posting more short videos on Youtube and social media between now and 
 <p>Since I will work for the people of Waite, my priorities have to be determined by the people of Waite. I will always be seeking to further improve my policies and ensure they are aligned with the wishes of the electorate, including in response to feedback from the people of Waite. Please send any feedback to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
 
 <p>If I'm elected, I will continue to develop these policies, make more short videos to explain each of them, and add a comment section to this website so that others can contribute.</p>
-
-<p>My education policies are currently under development and will be published shortly.</p>
 
 <p>Here is a (very) quick summary of most of my policies:</p>
 
