--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@ I will be posting more short videos on Youtube and social media between now and 
     <li><a href="#19.4_Regulate_Advertising">Prevent harm from advertising and provide better labelling</a> (19.4)</li>
     <li><a href="#19.5_Free_Sport">Provide a yearly free class in a sport or other healthy activity</a> (19.5)</li>
     <li><a href="#19.6_Healthier_Drinks">Ensure more diet soft drink options than regular soft drinks</a> (19.6)</li>
+    <li><a href="#19.7_Women's_Leave">Extra leave for women to deal with women's health issues and reproductive cycles like menstruation</a> (19.7)</li>
    </ul>
   </li>
   <h3><a href="#20.0_Non-violence">Animal cruelty</a></h3>
@@ -893,6 +894,10 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  </h4>
 
  <p>Require all venues and vending machines selling soft drink to sell more diet soft drink options than regular soft drink options.</p>
+
+ <h4 href="#19.7_Women's_Leave">Extra leave for women to deal with women's health issues and reproductive cycles like menstruation<br>
+  <small>(19.7_Women's_Leave)</small>
+ </h4>
 
  <h4 id="20.0_Non-violence">Support any measure against cruelty and violence towards animals<br>
   <small>(20.0_Non-violence)</small>
