--- a/index.html
+++ b/index.html
@@ -895,9 +895,11 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 
  <p>Require all venues and vending machines selling soft drink to sell more diet soft drink options than regular soft drink options.</p>
 
- <h4 href="#19.7_Women's_Leave">Extra leave for women to deal with women's health issues and reproductive cycles like menstruation<br>
+ <h4 href="#19.7_Women's_Leave">Women's leave<br>
   <small>(19.7_Women's_Leave)</small>
  </h4>
+
+ <p>Extra leave for women to deal with women's health issues and reproductive cycles like menstruation.</p>
 
  <h4 id="20.0_Non-violence">Support any measure against cruelty and violence towards animals<br>
   <small>(20.0_Non-violence)</small>
