Free uni subject

--- a/index.html
+++ b/index.html
@@ -821,6 +821,9 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  <li>
    18.1.2 Look into having two main classes for each child at Primary School: an age-based class that they stick with throughout their time at school, and a literacy and numeracy based class that disregards age to teach children who are at the same level in these subjects.
  </li>
+ <li>
+   18.1.3 Allow everyone to study one university subject for one semester for free at university, and then continue to study one subject per semester for free if their grades in their previous free subject were good, to facilitate lifelong learning and skill developemnt.
+ </li>
 </ul>
 
 <h4 id="18.2_Support_Artists">Support South Australian artists<br>
