--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
   <small>(19.7_Women's_Leave)</small>
  </h4>
 
- <p>Extra leave for women for women's health issues and reproductive cycles like menstruation.</p>
+ <p>Extra leave for women for pain management due to women's health issues and reproductive cycles like menstruation.</p>
 
  <h4 id="20.0_Non-violence">Support any measure against cruelty and violence towards animals<br>
   <small>(20.0_Non-violence)</small>
