--- a/index.html
+++ b/index.html
@@ -824,6 +824,9 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  <li>
    18.1.3 Allow everyone to study one university subject for one semester for free at university, and then continue to study one subject per semester for free if their grades in their previous free subject were good, to facilitate lifelong learning and skill developemnt.
  </li>
+ <li>
+   18.1.4 Ensure libraries are well funded.
+ </li>
 </ul>
 
 <h4 id="18.2_Support_Artists">Support South Australian artists<br>
