--- a/index.html
+++ b/index.html
@@ -397,6 +397,9 @@ I will be posting more short videos on Youtube and social media between now and 
      <a href="#18.1_Support_Learning">Provide funding for smaller class sizes, better pay for teachers and evidence-based reform</a>
     </li>
     <li>
+     <a href="#18.1_Support_Learning">Ensure libraries are well funded</a>
+    </li>
+    <li>
      <a href="#18.2_Support_Artists">Ensure more local music in local businesses and fair pay for local recording artists</a>
     </li>
    </ul>
