--- a/index.html
+++ b/index.html
@@ -677,6 +677,10 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 
 <p>Ultimately, every well-meaning person who wants to work in policy development in a democracy should be allowed fair involvement, and paid fairly if they want pay. Pay level above the minimum award rate and maximum hours should initially be proportionate to objective skills testing, and later that salary should be added to with bonuses based on democratic review and peer review of the quality of their contributions, and their quantity of contribution to implemented policies. No one should be denied the right to be involved with policy development in a democracy, and no one should be denied the right to adequate pay for such work.</p>
 
+<h3>Employing people to work in software and data science</h3>
+
+<p>Give modern businesses whose products or services are primarily software, websites, data science and so on a corporate tax exemption for at least the next 10 years.</p>
+
 <h4 id="11.0_Reduce_Immigration">Reduce net immigration without reducing the refugee intake<br>
  <small>(11.0_Reduce_Immigration)</small>
 </h4>
