--- a/index.html
+++ b/index.html
@@ -507,6 +507,8 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 </ul>
 </p>
 
+<p>Ensure that gig workers are paid at least minimum wage after expenses.</p>
+
 <h4 id="2.0_RBA_Reform">Reserve Bank Reform
  <small>(2.0_RBA_Reform)</small>
 </h4>
