--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
    <ul>
     <li>13.3.1 Purify Adelaide's sewage water (like Perth does) so that the remaining high-nutrient sludge can be disposed of some other way;</li>
     <li>13.3.2 Measure the contribution of our industries to pollution and incentivise them to switch to methods or industries that cause less pollution;</li>
-    <li>13.3.3 Lead the world in reducing climate crisis pollution from transport and agriculture (the two main pollution sectors in South Australia) as detailed in 14.0_Clean_Air below.
+    <li>14.1 Lead the world in reducing climate crisis pollution, including from transport and agriculture (the two main pollution sectors in South Australia) as detailed in 14.0_Clean_Air below.
    </ul>
  </ul>
 
@@ -759,22 +759,34 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
   <small>(14.0_Clean_Air)</small>
  </h4>
 
- <p>14.1 Reduce all major pollutants by over 50% by 2030, aiming for at least 75% total reduction in CO<sub>2</sub>e in both GWP20 and GWP100. Major atmospheric pollutants in South Australia are carbon dioxide (CO<sub>2</sub>), methane, nitrous oxide (N<sub>2</sub>O), nitrogen dioxide (NO<sub>2</sub>), and particulate matter including black carbon.</p>
+ <h5>Local action</h5>
 
- <p>14.2 Provide much higher frequency and higher quality public transport and workplace policies that reduce commuting at rush hour. Greatly increase the frequency of bus services with a new electric bus fleet. Make every second bus on each route free. Introduce more bus lanes to bypass traffic. A higher frequency of public transport services will not only reduce traffic congestion, but also reduce overcrowding on the buses, trains and trams themselves.</p>
+ <p>14.1.1 Reduce all major pollutants by over 50% by 2030, aiming for at least 75% total reduction in CO<sub>2</sub>e in both GWP20 and GWP100. Major atmospheric pollutants in South Australia are carbon dioxide (CO<sub>2</sub>), methane, nitrous oxide (N<sub>2</sub>O), nitrogen dioxide (NO<sub>2</sub>), and particulate matter including black carbon.</p>
 
- <p>14.3 Reduce agricultural emissions by taxing the export of slaughterhouse products according to the total pollution created. Parliament or the Quality of Life Commission could regulate the local sale of related products to guarantee supply of these products continues at a fair price for locals.</p>
+ <p>14.1.2 Provide much higher frequency and higher quality public transport and workplace policies that reduce commuting at rush hour. Greatly increase the frequency of bus services with a new electric bus fleet. Make every second bus on each route free. Introduce more bus lanes to bypass traffic. A higher frequency of public transport services will not only reduce traffic congestion, but also reduce overcrowding on the buses, trains and trams themselves.</p>
 
- <p>14.4 Make it easier to buy an EV:</p>
+ <p>14.1.3 Reduce agricultural emissions by taxing the export of slaughterhouse products according to the total pollution created. Parliament or the Quality of Life Commission could regulate the local sale of related products to guarantee supply of these products continues at a fair price for locals.</p>
+
+ <p>14.1.4 Make it easier to buy an EV:</p>
  <ul>
-  <li>14.4.1 Eliminate taxes on electric vehicle purchases;</li>
-  <li>14.4.2 Provide zero-interest or low-interest loans for electric vehicle purchases under Policy 1.1_Efficiency_Loans;</li>
-  <li>14.4.3 Make charging stations free at times when there is an oversupply of electricity on the grid;</li>
-  <li>14.4.4 Require an adequate number of charging stations in every parking area;</li>
-  <li>14.4.5 Extend Labor's home battery scheme to vehicle-to-home (V2H) chargers, so that people can use their EV battery as a home battery.</li>
+  <li>14.1.4.1 Eliminate taxes on electric vehicle purchases;</li>
+  <li>14.1.4.2 Provide zero-interest or low-interest loans for electric vehicle purchases under Policy 1.1_Efficiency_Loans;</li>
+  <li>14.1.4.3 Make charging stations free at times when there is an oversupply of electricity on the grid;</li>
+  <li>14.1.4.4 Require an adequate number of charging stations in every parking area;</li>
+  <li>14.1.4.5 Extend Labor's home battery scheme to vehicle-to-home (V2H) chargers, so that people can use their EV battery as a home battery.</li>
  </ul>
 
  <p>South Australia gets about 80% of our electricity from renewables, which puts us second after Tasmania, and first when it comes to solar and wind combined. In fact, when it comes to solar and wind combined, we are ahead of every country in the world, and ahead of every state in the United States. This puts us in a unique position to lead the entire world when it comes to addressing the other two biggest pollution sectors: transport and agriculture. Electricity production makes up less than 40% of global greenhouse gas pollution, and less than 20% in Australia, so it is essential that South Australia demonstrates to the whole world how to eliminate pollution in other sectors in a way that provides maximum benefit to the state.</p>
+
+ <h5>Global action</h5>
+
+ <p>There are two way to influence the climate crisis on a global scale.</p>
+ <ul>
+  <li>14.1 Leadership. Demonstrate to the world that pollution can be reduce in a beneficial way, so that they want to follow our lead, or need to follow our lead to stay competetive.</li>
+  <li>14.2 Coordination. Work with other countries to develop global incentives such as tax incentives and other incentives in order to motivate all countries to take adequate action.</li>
+ </ul>
+
+ <p>14.1 In South Australia, where we have already lead the world in solar and wind power, the next step, along with stabilising the grid and reducing electricity prices, is to lead the world in reducing climate crisis pollution from other sectors, including from transport and agriculture (the two main pollution sectors in South Australia) as detailed in the "Local action" section above.</p>
 
  <h4 id="15.0_Belair_Train">Improve the Belair train line<br>
   <small>(15.0_Belair_Train)</small>
