--- a/index.html
+++ b/index.html
@@ -382,12 +382,13 @@ I will be posting more short videos on Youtube and social media between now and 
   <li>
    <a href="#17.0_Democratise">Make our system more democratic</a>
    <ul class="sub-toc-list">
-    <li><a href="#17.1_ECSA_Funding">Have ECSA provide info on every candidate</a> (17.1)</li>
-    <li><a href="#17.2_Spending_Cap">Tighten the cap on candidate spending</a> (17.2)</li>
-    <li><a href="#17.3_Campaigning_Ban">Ban political campaigning at polling booths</a> (17.3)</li>
-    <li><a href="#17.4_Address_End">End the requirement for some political candidates to publish their private home address</a> (17.4)</li>
-    <li><a href="#17.6_Corporate_Interference">Stop harmful corporate interference in our elections and our parliament</a></li>
-    <li><a href="#17.5_Electorate_statistics">Gather and publish data on what each South Australian state electorate wants from government, and what experts support</a> (17.5)</li>
+    <li><a href="#17.1.1_ECSA_Funding">Have ECSA provide info on every candidate</a> (17.1)</li>
+    <li><a href="#17.1.2_Spending_Cap">Tighten the cap on candidate spending</a> (17.2)</li>
+    <li><a href="#17.1.3_Campaigning_Ban">Ban political campaigning at polling booths</a> (17.3)</li>
+    <li><a href="#17.1.4_Address_End">End the requirement for some political candidates to publish their private home address</a> (17.4)</li>
+
+    <li><a href="#17.1.5_Electorate_statistics">Gather and publish data on what each South Australian state electorate wants from government, and what experts support</a> (17.5)</li>
+    <li><a href="#17.2_Corporate_Interference">Stop harmful corporate interference in our elections and our parliament</a></li>
    </ul>
   </li>
   <h3><a href="#18.0_Education_and_Music">Education and Music</a></h3>
@@ -808,11 +809,12 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 
  <p>Deliver integrity in politics, transparency and accountability in government and a stronger democracy, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations. My plan for this will later be published in detail, but the plan starts with supporting the movement for more independent politicians in this country. In the meantime, there are some reforms that ideally should be implemented immediately, even prior to the coming election in March 2026:</p>
  <ul>
-  <li id="17.1_ECSA_Funding">17.1 Provide ECSA with adequate funding to provide information to every voter about every candidate in their electorate and their policies. It's not expensive to send a pamphlet to every voter. It ensures a balanced amount of space and advertising for each candidate, and it also allows the following policy:</li>
-  <li id="17.2_Spending_Cap">17.2 Tighten the cap on candidate spending. Although large political donations have been banned, wealthy or otherwise well-resourced candidates can still spend up to $100&#8239;000 on their campaign during the expenditure period alone, and as much as they like outside the expenditure period, while other candidates may not be able to afford spending even $10&#8239;000. This creates an unfair disadvantage for less wealthy candidates, and even some of the wealthier candidates might prefer to spend less than $100&#8239;000 on the condition that none of their opponents is spending more than they are. Since the upfront advance funding for new candidates is $5000, the default statewide cap should be lowered to $10&#8239;000 per candidate in the pre-election period, with candidates having the right to negotiate a different cap for their electorate between $5000 and $100&#8239;000 if the majority of candidates in that electorate agree to it. There should also be a cap introduced for total expenditure in the years outside the pre-election period.</li>
-  <li id="17.3_Campaigning_Ban">17.3 Ban political campaigning at polling booths. It's annoying, and it creates further bias towards candidates with more resources.</li>
-  <li id="17.4_Address_End">17.4 End the requirement for political candidates to put an exact address on their political materials. This is unfair on candidates who don't have an office, since they currently would have to put their exact home address on all materials including on the internet. PO Boxes aren't currently allowed as the address, and even this probably shouldn't be a requirement in the days of the internet and email. In situations where it's obvious who authorised the content, e.g. it is posted on an official account online, the "Authorised by" message should not be required at all.</li>
-  <li id="17.5_Electorate_statistics">17.5 Provide the South Australian branch of the ABS with enough funding to gather and publish data on what each South Australian state electorate wants from government, and what experts support. Without this data, our democracy cannot function as intended: politicians are not accountable, and politicians who want to be accountable do not have the data they need to best serve their community.</li>
+  <li id="17.1.1_ECSA_Funding">17.1.1 Provide ECSA with adequate funding to provide information to every voter about every candidate in their electorate and their policies. It's not expensive to send a pamphlet to every voter. It ensures a balanced amount of space and advertising for each candidate, and it also allows the following policy:</li>
+  <li id="17.1.2_Spending_Cap">17.1.2 Tighten the cap on candidate spending. Although large political donations have been banned, wealthy or otherwise well-resourced candidates can still spend up to $100&#8239;000 on their campaign during the expenditure period alone, and as much as they like outside the expenditure period, while other candidates may not be able to afford spending even $10&#8239;000. This creates an unfair disadvantage for less wealthy candidates, and even some of the wealthier candidates might prefer to spend less than $100&#8239;000 on the condition that none of their opponents is spending more than they are. Since the upfront advance funding for new candidates is $5000, the default statewide cap should be lowered to $10&#8239;000 per candidate in the pre-election period, with candidates having the right to negotiate a different cap for their electorate between $5000 and $100&#8239;000 if the majority of candidates in that electorate agree to it. There should also be a cap introduced for total expenditure in the years outside the pre-election period.</li>
+  <li id="17.1.3_Campaigning_Ban">17.1.3 Ban political campaigning at polling booths. It's annoying, and it creates further bias towards candidates with more resources.</li>
+  <li id="17.1.4_Address_End">17.1.4 End the requirement for political candidates to put an exact address on their political materials. This is unfair on candidates who don't have an office, since they currently would have to put their exact home address on all materials including on the internet. PO Boxes aren't currently allowed as the address, and even this probably shouldn't be a requirement in the days of the internet and email. In situations where it's obvious who authorised the content, e.g. it is posted on an official account online, the "Authorised by" message should not be required at all.</li>
+  <li id="17.1.5_Electorate_statistics">17.1.5 Provide the South Australian branch of the ABS with enough funding to gather and publish data on what each South Australian state electorate wants from government, and what experts support. Without this data, our democracy cannot function as intended: politicians are not accountable, and politicians who want to be accountable do not have the data they need to best serve their community.</li>
+  <li id="17.1.6_True_Proportional">17.1.6 Create truly proportional representation in the upper house, with the voting power of each member of the house being proportional to the number of votes that they received as an individual, preventing the undemocratic redistribution of votes to less preferred individuals. In this house, only the candidates names will be shown, not their party, and candidates will not be grouped by party, eliminating the bias in favour of political parties.</li>
   <!-- <li>17.X Hold council elections on the same day as state elections in order to increase council voting and thereby increase accountability of local councils. Allow candidates to run for multiple positions (but not multiple wards/electorates), such as mayor and MP, but only accept one of the positions if they win more than one. Due to our preferential voting system, votes can easily be redistributed if a candidate wins more than one position and has to turn one down.</li> -->
  </ul>
 
@@ -820,15 +822,15 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 
  <h3>Interfering corporations and organised crime</h3>
 
-<h4 id="17.6_Corporate_Interference">Stop harmful corporate interference in our elections and our parliament<br>
- <small>(17.6_Corporate_Interference)</small>
+<h4 id="17.2_Corporate_Interference">Stop harmful corporate interference in our elections and our parliament<br>
+ <small>(17.2_Corporate_Interference)</small>
 </h4>
 
 <p>Corporations often interfere in elections and in parliament to prevent policies that would benefit most people but reduce their profits. Some of these businesses, including at least some casinos, have ties to organised crime and money laundering. Although large political donations have been banned in South Australia, there are still legal and illegal means that they may attempt to use to influence elections. To prevent this we need to:</p>
 <ul>
- <li>17.6.1 Prohibit interference in elections or in politics to prevent policies that would benefit most people but reduce one's profits, and retroactively include interference in recent elections.</li>
- <li>17.6.2 Ensure punishments are severe enough to successfully discourage this type of interference in our democracy; consider including asset confiscation for corporations and gaol time for individuals; consider setting up government-owned competitors in any industries guilty of these types of crimes.</li>
- <li>17.6.3 Provide ICAC the resources and oversight to ensure they thoroughly investigate corporations, politicians and political parties for this type of interference in recent elections.</li>
+ <li>17.2.1 Prohibit interference in elections or in politics to prevent policies that would benefit most people but reduce one's profits, and retroactively include interference in recent elections.</li>
+ <li>17.2.2 Ensure punishments are severe enough to successfully discourage this type of interference in our democracy; consider including asset confiscation for corporations and gaol time for individuals; consider setting up government-owned competitors in any industries guilty of these types of crimes.</li>
+ <li>17.2.3 Provide ICAC the resources and oversight to ensure they thoroughly investigate corporations, politicians and political parties for this type of interference in recent elections.</li>
 </ul>
 
 <h4><a href="#18.0_Education_and_Music">Education and Music</a>
